--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -10,10 +10,10 @@
     </div> 
     <article>
       <div class="row">
-        <div class="col-12">
+        <div class="col-12 left">
           <p>Hey there! Thanks for visiting my site. This is just a place for me to put down my experiences travelling. 
             This is definitely not a place for you to come and actually learn substantial things about the places I visit,
-            just FYI! I am using this site to hone my HTML and CSS skills, using Boostrap! Thanks for visiting!</p>
+            just FYI! I am no expert! Thanks for visiting!</p>
         </div>
       </div>
     </article> 
