--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -9,7 +9,7 @@
         </div>
       </div> 
       <div class="row">
-        <div class="col-12"> 
+        <div class="col-12 contact"> 
           <form action="" method="post">
             {{ form.hidden_tag() }}
             <p> 
