--- a/app/templates/italy.html
+++ b/app/templates/italy.html
@@ -15,37 +15,43 @@
               <img src="{{ url_for('static', filename='images/italy_piazzale_cat.jpeg') }}" alt="Cat on steps, Piazzale Michelangelo">
               <figcaption>A cat chilling on steps of Piazzale Michelangelo</figcaption>
             </figure>
-            <p> I studied abroad in Italy and even learned Italian pretty well! I have unfortunately forgetten much of it. 
-              I studied at the University of Florence and stayed with a sweet Italian family. The best way to take in Florence was
-              to go to the top of the Piazzale Michelangelo, which is positioned high above the whole city and which we visited
-              early in our stay.</p> 
-            <figure class="side-side">
+            <p> I studied abroad in Italy and even learned Italian pretty well!
+                I have unfortunately forgetten much of it. I studied at the University
+                of Florence and stayed with a sweet Italian family. The best way to 
+                take in Florence was to go to the top of the Piazzale Michelangelo, 
+                which is positioned high above the whole city and which we visited
+                early in our stay.</p> 
+            <figure>
               <img src="{{ url_for('static', filename='images/italy_duomo.jpeg') }}" alt="Duomo of Florence, Piazzale Michelangelo">
-              <img src="{{ url_for('static', filename='images/italy_ponte_vecchio.jpeg') }}" alt="Ponte Vecchio, Florence">
               <figcaption>Views from the Piazzale</figcaption>
             </figure> 
-            <p>From there, you can see the Duomo (which is in a dense, intricate area with one of the best pizza shops I have 
-              ever come across) and Ponte Vecchio. Ponte Vecchio was really hard to visit because I wanted to buy so many things! For most of
-              my stay in Italy, however, I spent the bulk of my money on pizza and gelato.</p> 
+            <p>From there, you can see the Duomo (which is in a dense, intricate 
+              area with one of the best pizza shops I have ever come across) and 
+              Ponte Vecchio. Ponte Vecchio was really hard to visit because I wanted 
+              to buy so many things! For most of my stay in Italy, however, I spent 
+              the bulk of my money on pizza and gelato.</p> 
             <figure> 
               <img src="{{ url_for('static', filename='images/italy_tuscany.jpeg') }}" alt="Tuscan countryside">
               <figcaption>A glorious day in rural Tuscany! </figcaption>
             </figure>
-            <p>Aside from Florence, we got to visit a bunch of other places. I went to the Tuscan countryside and got tipsy at a wine tasting.</p>
+            <p>Aside from Florence, we got to visit a bunch of other places. I went 
+              to the Tuscan countryside and got tipsy at a wine tasting.</p>
             <figure> 
               <img src="{{ url_for('static', filename='images/italy_venice.jpeg') }}" alt="Venice">
               <figcaption>Venice :)</figcaption>
             </figure>
-            <p>I visited Venice, which was the city that first got me interested in Italy to begin with. I bought a really cool Carnevale mask,
+            <p>I visited Venice, which was the city that first got me interested 
+              in Italy to begin with. I bought a really cool Carnevale mask,
               the Plague Doctor model. </p>
-            <figure class="side-side">
-              <img src="{{ url_for('static', filename='images/italy_pisa.jpeg') }}" alt="Leaning tower of Pisa">
+            <figure>
               <img src="{{ url_for('static', filename='images/italy_colosseum.jpeg') }}" alt="Colosseum, Rome">
-              <figcaption>The Tower of Pisa and the Colosseum!</figcaption>
+              <figcaption>The Colosseum!</figcaption>
             </figure> 
-            <p>I also went to Pisa a few times, as it had an airport Ryanair used for its flights, and I checked out
-                Rome, though only for a day! At least I got to see the Colosseum, which was both eerie and majestic. I still need to go back to
-                Italy, however, as I never did make it to Milan or Sicily.</p>
+            <p>I also went to Pisa a few times, as it had an airport Ryanair used 
+               for its flights, and I checked out Rome, though only for a day! At 
+               least I got to see the Colosseum, which was both eerie and majestic. 
+               I still need to go back to Italy, however, as I never did make it to 
+               Milan or Sicily.</p>
           </div>
         </div>  
       </article>
