--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -4,7 +4,7 @@
   <main>
     <div class="container">
       <div class="row">
-        <div class="col-12">
+        <div class="col-12 left">
           <h1>File Not Found</h1>
           <p><a href="{{ url_for('index') }}">Back</a></p>
         </div>
