--- a/app/templates/argentina.html
+++ b/app/templates/argentina.html
@@ -15,31 +15,54 @@
               <img src="{{ url_for('static', filename='images/argentina_parque.jpeg') }}" alt="Gorgeous Centenario Parque">
               <figcaption>A view of Centenario Parque</figcaption> 
             </figure> 
-            <p>I visited Argentina with a friend who has family in Buenos Aires. My friend's cousin lives in an apartment in the Caballito neighborhood,
-              right next to the Parque Centenario. Since we went in October, it was spring in Argentina and lots of people would sit on the grass
+            <p>I visited Argentina with a friend who has family in Buenos Aires.
+              My friend's cousin lives in an apartment in the Caballito neighborhood,
+              right next to the Parque Centenario. Since we went in October, it was
+              spring in Argentina and lots of people would sit on the grass
               in the park and drink matte.</p>
             <figure> 
               <img src="{{ url_for('static', filename='images/argentina_jacaranda.jpeg') }}" alt="Jacaranda - tree with purple flowers">
               <figcaption>A Jacaranda tree</figcaption>
             </figure> 
-            <p>Our first few days in Buenos Aires centered on getting to know the lay of the land. We visited many neighborhoods, like Microcentro, Recoleta,
+            <p>Our first few days in Buenos Aires centered on getting to know the lay of 
+              the land. We visited many neighborhoods, like Microcentro, Recoleta,
               and La Boca. The city is gorgeous and has Jacaranda trees all over the place.</p> 
-            <figure class="side-side"> 
+            <figure> 
               <img src="{{ url_for('static', filename='images/argentina_la_boca.jpeg') }}" alt="Colorful La Boca street, Buenos Aires">
+              <figcaption>La Boca</figcaption>
+            </figure>
+            <p>La Boca has the colorful Caminito, which was one of the first things I 
+                researched once I knew I would be going to Argentina. I couldn't wait to 
+                see it!</p>
+            <figure>
               <img src="{{ url_for('static', filename='images/argentina_casa_rosada.jpeg') }}" alt="Casa Rosada, Buenos Aires">
+              <figcaption>Casa Rosada</figcaption>
+            </figure>
+            <p> Microcentro has numerous buildings of note, like Casa Rosada, which 
+              houses the office of the President. It was a generally impressive place.</p>
+            <figure>
               <img src="{{ url_for('static', filename='images/argentina_recoleta.jpeg') }}" alt="La Recoleta - famous cemetery">
-              <figcaption>From left to right: La Boca, Casa Rosada, Recoleta cemetary</figcaption>
+              <figcaption>Recoleta cemetary</figcaption>
             </figure>   
-            <p>La Boca has the colorful Caminito, Microcentro has numerous buildings of note, like Casa Rosada (housing the office of the President), and 
-              Recoleta has not only an awesome museum of waterworks (Palacio de las Aguas) but also the famous Recoleta cemetary, with mausoleums for such famous
-              people as Eva Peron!</p> 
-            <figure class="side-side"> 
-              <img src="{{ url_for('static', filename='images/argentina_el_ateneo.jpeg') }}" alt="El Ateneo bookstore, Buenos Aires">
+            <p>Recoleta was really interesting - it has an awesome museum of waterworks called 
+              Palacio de las Aguas, where I got to learn about the history of water distribution 
+              in the city. I'd never before been to a museum with so many toilets! Recoleta also 
+              has the famous Recoleta cemetary, with mausoleums for such famous people as Eva 
+              Peron. It was very beautiful and peaceful.</p> 
+            <figure> 
               <img src="{{ url_for('static', filename='images/argentina_el_tigre.jpeg') }}" alt="A typical El Tigre home">  
-              <figcaption>On the left, an image of inside of El Ateneo. On right, image of a typical El Tigre home on the water</figcaption> 
+              <figcaption>Image of a typical El Tigre home on the water</figcaption> 
             </figure> 
-            <p>Our last few days in Argentina were spent basking in sun at El Tigre (where I also gorged on steak and fries) and visiting El Ateneo, the 
-              massive bookshop in Buenos Aires. I made sure to buy a few books so I could brag I had shopped there.</p> 
+            <p>One of the last things we did in Argentina was bask in the sun at 
+              El Tigre. We had lunch by the water - I gorged on steak and fries. 
+              *cue Homer drool*</p>
+            <figure>
+              <img src="{{ url_for('static', filename='images/argentina_el_ateneo.jpeg') }}" alt="El Ateneo bookstore, Buenos Aires">
+              <figcaption>El Ateneo</figcaption>
+            </figure>
+            <p>The very last thing of note we did was visit 
+              El Ateneo, the massive bookshop in Buenos Aires. I made sure 
+              to buy a few books so I could brag I had shopped there.</p> 
           </div>
         </div>
       </article> 
