--- a/app/templates/canada.html
+++ b/app/templates/canada.html
@@ -15,22 +15,33 @@
               <img src="{{ url_for('static', filename='images/canada_cn_tower.jpeg') }}" alt="CN Tower, Toronto">
               <figcaption>A view of CN Tower</figcaption>
             </figure> 
-            <p>I have spent many summers in Canada, as I have extensive family there on both coasts. One of my earliest memories 
-              is of stepping onto the glass floor at CN Tower - I remember being frightened but also thrilled!</p> 
-            <figure class="side-side"> 
-              <img src="{{ url_for('static', filename='images/canada_stanley_park.jpeg') }}" alt="Totem Poles at Stanley Park, Vancouver">
+            <p>I have spent many summers in Canada, as I have extensive family
+              there on both coasts. One of my earliest memories is of stepping 
+              onto the glass floor at CN Tower - I remember being frightened but 
+              also thrilled!</p> 
+            <figure>
               <img src="{{ url_for('static', filename='images/canada_vancouver_skyline.jpeg') }}" alt="Vancouver skyline">
-              <figcaption>At left, Totel Poles in Stanley park. At right, view of Vancouver skyline.</figcaption>
+              <figcaption>View of Vancouver skyline.</figcaption>
             </figure> 
-            <p>When not in Toronto, I was passing time in Vancouver. My grandparents lived nearby in Abbotsford, which was for all intents and purposes a 
-              mini-Punjab. Since it was a rural area near farmland, it was also pretty chill. Still, it was always nice to go back to 
+            <p>When in Canada, I am usually on the West Coast, in Vancouver. 
+              My grandparents live in nearby Abbotsford, which is for all intents 
+              and purposes a mini-Punjab. Since it's a rural area near farmland, 
+              it's also pretty chill. Still, it's always nice to go back to 
               family in Vancouver and get reconnected with the rest of the world!</p> 
+              <figure> 
+                <img src="{{ url_for('static', filename='images/canada_stanley_park.jpeg') }}" alt="Totem Poles at Stanley Park, Vancouver">
+                <figcaption>Totem Poles in Stanley Park</figcaption>
+              </figure>
+              <p>One site I've visited many times with family is Stanley Park. I love 
+                looking at the Totem Poles and taking in all the details.</p>
             <figure> 
               <img src="{{ url_for('static', filename='images/canada_mont_tremblant.jpeg') }}" alt="Mountains in Quebec, Mont Tremblant">
-              <figcaption>The countryside at Mont Tremblant.</figcaption>
+              <figcaption>The countryside at Mont Tremblant</figcaption>
             </figure> 
-            <p>I would love to visit other parts of Canada, like Nova Scotia. I have been lucky enough to go to the Mont Tremblant resort
-              in Quebec, but I didn't get a chance to really explore Montreal, which we only drove through.. There is so much more I have 
+            <p>I would love to visit other parts of Canada, like Nova Scotia. 
+              I have been lucky enough to go to the Mont Tremblant resort in 
+              Quebec, but I didn't get a chance to really explore Montreal, 
+              which we only drove through. There is so much more I have 
               yet to see!</p>
           </div>
         </div> 
