--- a/app/templates/egypt.html
+++ b/app/templates/egypt.html
@@ -11,39 +11,61 @@
       <article class="country-page">
         <div class="row">
           <div class="col-12">
-            <p>Egypt was a destination I had been dying to visit for many, many years. My childhood friend is 
-              Egytian and has family in Alexandria, so we'd grown up discussing this trip and were excited when 
-              we were finally able to do it together. </p>
-            <figure class="side-side">  
+            <p>Egypt was a destination I had been dying to visit for many, many
+              years. My childhood friend is Egytian and has family in Alexandria, 
+              so we'd grown up discussing this trip and were excited when 
+              we were finally able to do it together.</p>
+            <figure>  
               <img src="{{ url_for('static', filename='images/egypt_karnak.jpeg') }}" alt="Karnak Temple, Luxor">
-              <img src="{{ url_for('static', filename='images/egypt_balloon.jpeg') }}" alt="Hot air balloon over Hatshepsut Temple, Luxor">
-              <figcaption>On left, Karnak Temple at night. On right, hot air balloon over Hatshepsut Temple</figcaption>
+              <figcaption>Karnak Temple at night</figcaption>
             </figure> 
-            <p>Our first few days were spent in Luxor, visiting ancient sites like the Hatshepsut and Karnak temples,
-              and befriending locals. My friend, for example, befriended a local boatman who took us out onto the Nile 
-              and helped us get tickets for a hot air balloon tour (which allowed us to see Hatshepsut from above)!</p>
+            <p>Our first few days were spent in Luxor, visiting ancient sites
+              like the Hatshepsut and Karnak temples, the latter of which we 
+              saw at night, when there is an impressive light show in several 
+              languages! It was pretty crazy to think of all the mighty pharaohs
+              that had these temples built in their name. I couldn't help but wonder
+              what it must have been like to have all that power...</p>
+            <figure>
+              <img src="{{ url_for('static', filename='images/egypt_balloon.jpeg') }}" alt="Hot air balloon over Hatshepsut Temple, Luxor">
+              <figcaption>Hot air balloon over Hatshepsut Temple</figcaption>
+            </figure>
+            <p>As my friend is fluent in Arabic, we were fortunate enough to
+              befriend locals. For example, we befriended a local boatman who 
+              took us out onto the Nile and helped us get tickets for a hot air 
+              balloon tour (which allowed us to see Hatshepsut from above)! He was
+              also kind enough to welcome us to his home and host us for dinner. 
+              The hospitality we experienced was truly something else.</p>
             <figure> 
               <img src="{{ url_for('static', filename='images/egypt_alexandria.jpeg') }}" alt="Alexandria coastline">
-              <figcaption>The coastline of Alexandria.</figcaption>
+              <figcaption>The coastline of Alexandria</figcaption>
             </figure> 
-            <p>After Luxor, we spent time with my friend's family in Alexandria. The family was incredibly sweet and hospitable. 
-            They took us around all over, including to the Citadel of Qaitbay, the Alexandrian library, and to get tea
-            by the sea!</p> 
-            <figure class="side-side"> 
-              <img src="{{ url_for('static', filename='images/egypt_muhammad_ali.jpeg') }}" alt="Muhammad Ali Mosque in Cairo">
+            <p>After Luxor, we spent time with my friend's family in Alexandria. 
+              Her family was incredibly sweet and hospitable. They took us around 
+              all over, including to the Citadel of Qaitbay, the Alexandrian library, 
+              and to get tea by the sea!</p> 
+            <figure> 
               <img src="{{ url_for('static', filename='images/egypt_museum.jpeg') }}" alt="Outside of the pink Egyptian Museum">
-              <figcaption>The sights of Cairo - Muhammad Ali Mosque on left, Egyptian Museum on right.</figcaption>
+              <figcaption>The Egyptian Museum</figcaption>
             </figure> 
-            <p>We spent our final days in Cairo and visting the Pyramids of Giza. We visited a bunch of sites in Cairo,
-            including Tahrir Square, which has the Egyptian Museum nearby. Most memorable for me was the Mosque of Muhammad Ali 
-            in the Saladin Citadel.</p> 
+            <p>We spent our final days in Cairo. Aside from the pyramids (of course), 
+              we visited a bunch of other sites, including Tahrir Square, 
+              which has the Egyptian Museum nearby. It's a pretty huge place 
+              with a crazy number of ancient artifacts.</p>
+            <figure>
+              <img src="{{ url_for('static', filename='images/egypt_muhammad_ali.jpeg') }}" alt="Muhammad Ali Mosque in Cairo">
+              <figcaption>Mosque of Muhammad Ali</figcaption>
+            </figure>
+            <p>The most memorable site of Cairo for me was the Mosque of Muhammad 
+              Ali, in the Saladin Citadel. It was gorgeous and overlooked the city, 
+              so the views were stunning! I could have stayed there forever.</p> 
             <figure> 
               <img src="{{ url_for('static', filename='images/egypt_pyramid.jpeg') }}" alt="Pyramids of Giza">
-              <figcaption>The sites of Giza - Pyramids and Sphinx.</figcaption>
+              <figcaption>The sites of Giza - Pyramids and Sphinx</figcaption>
             </figure> 
-            <p>The Pyramids of Giza were as impressive as I imagined they would be. I rode a camel to get
-            there and it was honestly dreamlike. We also got to see the Sphinx, which was smaller than I thought it be but impressive
-            nonetheless.</p>
+            <p>The Pyramids of Giza were as impressive as I imagined they would be. 
+              I rode a camel to get there and it was honestly dreamlike. We also got 
+              to see the Sphinx, which was smaller than I thought it would be but 
+              impressive nonetheless.</p>
           </div>
         </div> 
       </article>
