--- a/app/templates/greece.html
+++ b/app/templates/greece.html
@@ -13,28 +13,37 @@
           <div class="col-12">
             <figure>  
               <img src="{{ url_for('static', filename='images/greece_mills.jpeg') }}" alt="Classic windmills, Rhodes">
-              <figcaption>Classic stone windmills in Rhodes.</figcaption>
+              <figcaption>Classic stone windmills in Rhodes</figcaption>
             </figure>
-            <p>I went to Greece while I was studying abroad in Italy. I went on my own to the island of
-                Rhodes. I have to be honest - I did it wrong. I went by myself to a little island with not 
-                enough books on me and booked myself in a room with a broken TV. So, after I had seen everything
-                there was to see in about 2 days, I spent the next 3 bored out of my mind. Still, I'm glad I went
-                and had the experience. After all, I learned how to not travel!</p> 
-            <figure class="side-side">
-              <img src="{{ url_for('static', filename='images/greece_mosque.jpeg') }}" alt="Mosque in old town of Rhodes">
+            <p>I went to Greece while I was studying abroad in Italy. I went on 
+              my own to the island of Rhodes. I have to be honest - I did it 
+              wrong. I went by myself to a little island with not enough books 
+              on me and booked myself in a room with a broken TV. So, after I 
+              had seen everything there was to see (in about 2 days), I spent the 
+              next 3 bored out of my mind. Still, I'm glad I went and had the 
+              experience. After all, I learned how to not travel!</p> 
+            <figure>
               <img src="{{ url_for('static', filename='images/greece_palace.jpeg') }}" alt="Palace of the Grand Master of the Knights of Rhodes">
-              <figcaption>Old Town, left to right: Mosque and Palace.</figcaption>
+              <figcaption>Old Town's Palace of the Grand Master of the Knights of Rhodes</figcaption>
             </figure> 
-            <p>I visited the Old Town neighborhood, which had the really cool Palace of the Grand Master of the 
-                Knights of Rhodes and the really old Turkish mosque known as the Suleymaniye Mosque.</p>
-            <figure class="side-side">
+            <p>I visited the Old Town neighborhood, which had the really cool 
+              Palace of the Grand Master of the Knights of Rhodes, which was 
+              surrounded by people and clearly very popular.</p>
+            <figure>
+              <img src="{{ url_for('static', filename='images/greece_mosque.jpeg') }}" alt="Mosque in old town of Rhodes">
+              <figcaption>Old Town's Suleymaniye Mosque</figcaption>
+            </figure>
+              <p>I also saw the really old Turkish mosque known as the Suleymaniye 
+                Mosque. I didn't get to go inside, but it was cool to learn about 
+                and was very pretty.</p>
+            <figure>
               <img src="{{ url_for('static', filename='images/greece_acropolis_1.jpeg') }}" alt="Acropolis on island of Rhodes">
-              <img src="{{ url_for('static', filename='images/greece_acropolis_2.jpeg') }}" alt="Acropolis on island of Rhodes">
-              <figcaption>Acropolis of Rhodes.</figcaption>
+              <figcaption>Acropolis of Rhodes</figcaption>
             </figure> 
-            <p>My other adventures in Rhodes led me to the Acropolis  and to a really small aquarium at the tip of the island. 
-              The aquarium was actually pretty cute. It was a pretty little island, but I hope to see more of Greece in the future (gotta
-              go to Athens!).</p>
+            <p>My other adventures in Rhodes led me to the Acropolis  and to a really 
+              small aquarium at the tip of the island. The aquarium was actually pretty 
+              cute. It was a pretty little island, but I hope to see more of Greece in 
+              the future (gotta go to Athens!).</p>
           </div>
         </div>
       </article>
