--- a/app/templates/netherlands.html
+++ b/app/templates/netherlands.html
@@ -15,21 +15,29 @@
               <img src="{{ url_for('static', filename='images/netherlands_i_am.jpeg') }}" alt="I am Amsterdam sign">
               <figcaption>The famous "I AM AMSTERDAM" sculpture</figcaption>
             </figure>
-            <p>I went to the Netherlands right after my trip to Berlin. I went with the same friend who was with me in Berlin,
-              and we both liked Amsterdam better. Our first few days were spent walking around Amsterdam and eating a lot of 
-              stroopwafel.</p>
-            <figure class="side-side"> 
-              <img src="{{ url_for('static', filename='images/netherlands_canals.jpeg') }}" alt="Canals of Amsterdam">
+            <p>I went to the Netherlands right after my trip to Berlin. I went 
+              with the same friend who was with me in Berlin, and we both liked 
+              Amsterdam better. Our first few days were spent walking around 
+              Amsterdam and eating a lot of stroopwafel.</p>
+            <figure> 
               <img src="{{ url_for('static', filename='images/netherlands_dam.jpeg') }}" alt="Dam Plaza, Amsterdam">
-              <figcaption>From left: Canals of Amerterdam at night and Dam Plaza</figcaption>
+              <figcaption>Dam Plaza</figcaption>
             </figure>
-            <p>Dam Plaza was fun to visit, especially since we went shopping at De Bijenkorf. We honeslty just walked around and had 
-              fun. It was especially beautiful at night.</p> 
+            <p>Dam Plaza was fun to visit, especially since we went shopping at De Bijenkorf.
+               I bought many quality presents for my family.</p>
+            <figure>
+              <img src="{{ url_for('static', filename='images/netherlands_canals.jpeg') }}" alt="Canals of Amsterdam">
+              <figcaption>Canals at night</figcaption>
+            </figure>
+              <p>We often just walked around and took in the city. It was especially 
+                beautiful at night, and there were a few light installations 
+                (I didn't take any worthy pics of those, unfortunately.)</p> 
             <figure> 
               <img src="{{ url_for('static', filename='images/netherlands_kinderdijk.jpeg') }}" alt="Windmills of Kinderdijk"> 
               <figcaption>Windmills of Kinderdijk</figcaption>
             </figure>
-            <p>Other than Amsterdam, the windmills of Kinderdijk  was another one of our destinations and it was really a cute trip!</p>
+            <p>Other than Amsterdam, the windmills of Kinderdijk  was another 
+              one of our destinations and it was really a cute trip!</p>
           </div>
         </div> 
       </article>
