--- a/app/templates/spain.html
+++ b/app/templates/spain.html
@@ -15,22 +15,26 @@
               <img src="{{ url_for('static', filename='images/spain_arc_de_triomf.jpeg') }}" alt="Arc de Triomf, Barcelona">
               <figcaption>Arc de Triomf</figcaption>
             </figure>
-            <p> I went to Barcelona with a bunch of people I didn't know very well, but it was still fun. We spent the first day
-              getting acclimated and walking around the Arc de Triomf. We ate a lot of tapas and also experienced the nightlife, which 
-              was timed a little too late for my taste (I'm a grandma).</p>
-            <figure class="side-side">
+            <p> I went to Barcelona with a bunch of people I didn't know very well,
+               but it was still fun. We spent the first day getting acclimated 
+               and walking around the Arc de Triomf. We ate a lot of tapas and 
+               also experienced the nightlife, which was timed a little too late 
+               for my taste (I'm a grandma).</p>
+            <figure>
               <img src="{{ url_for('static', filename='images/spain_sagrada_familia_1.jpeg') }}" alt="Sagrada Familia, Barcelona">
-              <img src="{{ url_for('static', filename='images/spain_sagrada_familia_2.jpeg') }}" alt="Sagrada Familia, Barcelona">
               <figcaption>Sagrada Familia</figcaption>
             </figure> 
             <p>My favorite parts were whenever we visited the architecure of
-              Antoni Gaudi, who I think is just crazy and out there - in a good way. The inside of Sagrada Familia is unlike anything I've
-              ever seen and I was taken aback to learn it has been under construction since it first started in 1882.</p> 
+              Antoni Gaudi, who I think is just crazy and out there - in a good
+               way. The inside of Sagrada Familia is unlike anything I've ever 
+               seen and I was taken aback to learn it has been under construction 
+               since it first started in 1882.</p> 
             <figure> 
               <img src="{{ url_for('static', filename='images/spain_casa_mila.jpeg') }}" alt="Casa Mila, Barcelona">
               <figcaption>Casa Mila</figcaption>
             </figure>
-            <p> I also greatly enjoyed visiting Casa Mila and wish I could live there! One can only dream. </p>
+            <p> I also greatly enjoyed visiting Casa Mila and wish I could live there! 
+              One can always dream. </p>
           </div>
         </div> 
       </article>
