--- a/app/templates/uruguay.html
+++ b/app/templates/uruguay.html
@@ -11,27 +11,34 @@
       <article class="country-page">
         <div class="row">
           <div class="col-12"> 
-            <figure class="side-side">
+            <figure>
               <img src="{{ url_for('static', filename='images/uruguay_green_building.jpeg') }}" alt="A cool green building">
-              <img src="{{ url_for('static', filename='images/uruguay_bench.jpeg') }}" alt="Cool bench in Colonia del Sacramento">
-              <figcaption>Uruguay had interesting architecture - check out this green builing and this bench!</figcaption>
+              <figcaption>Uruguay had interesting architecture - check out this green building!</figcaption>
             </figure> 
-            <p>We went to Uruguay when we went to Argentina, since they border each other. Uruguay may be small,
-              but it was really interesting. We visited Colonia del Sacramento, an ancient village, and Montevideo, 
-              the capital. Colonia del Sacramento had a bunch of buildings that were unlike anything I'd seen before - 
-              even the benches in Colonia were interesting!</p> 
+            <p>We went to Uruguay when we went to Argentina, since they border each
+               other. Uruguay may be small, but it was really interesting. We visited 
+               Colonia del Sacramento, an ancient village, and Montevideo, the capital.
+              Colonia del Sacramento had a bunch of buildings that were unlike 
+              anything I'd seen before.</p>
+            <figure>
+              <img src="{{ url_for('static', filename='images/uruguay_bench.jpeg') }}" alt="Cool bench in Colonia del Sacramento">
+              <figcaption>This bench tho</figcaption>
+            </figure>
+            <p>The buildings were interesting, but the benches in Colonia were 
+              something I could not stop staring at - I have never seen such 
+              pretty benches! I think NYC needs to step up its bench game.</p> 
             <figure> 
               <img src="{{ url_for('static', filename='images/uruguay_calle_de_los_suspiros.jpeg') }}" alt="Calle de los Suspiros, Colonia del Sacramento">
               <figcaption>Calle de los Suspiros</figcaption>
             </figure>
-            <p>Calle de los Suspiros attracted a lot of tourists and I could see why - there was something romantic 
-              about it!</p>  
+            <p>Calle de los Suspiros attracted a lot of tourists and I could 
+              see why - there was certainly something romantic about it!</p>  
             <figure> 
               <img src="{{ url_for('static', filename='images/uruguay_plaza_independencia.jpeg') }}" alt="Plaza Independencia, Montevideo">
               <figcaption>Plaza Independencia in Montevideo</figcaption>
             </figure>
-            <p>In Montevideo, we walking all over the place and checked out Plaza Independencia. All in all, a nice 
-              place to visit!</p> 
+            <p>In Montevideo, we walking all over the place and checked out 
+              Plaza Independencia. All in all, a nice place to visit!</p> 
           </div>
         </div>
       </article> 
