--- a/app/static/scss/main.scss
+++ b/app/static/scss/main.scss
@@ -179,8 +179,7 @@ section h3 {
 /*footer*/
 footer {
     position: relative;
-    min-height: 6%;
-    padding-top: 1em;
+    min-height: 3.5em;
 } 
 
 .footer {
