fixed grammatical/spelling errors

--- a/app/templates/canada.html
+++ b/app/templates/canada.html
@@ -33,7 +33,7 @@
               sizes="(min-width: 750px) 800px, 500px"
               src="{{ url_for('static', filename='images/canada_vancouver_skyline-500.jpg') }}"
               alt="Vancouver skyline">
-              <figcaption>View of Vancouver skyline.</figcaption>
+              <figcaption>View of Vancouver skyline</figcaption>
             </figure> 
             <p>When in Canada, I am usually on the West Coast, in Vancouver. 
               My grandparents live in nearby Abbotsford, which is for all intents 
