--- a/app/templates/egypt.html
+++ b/app/templates/egypt.html
@@ -12,7 +12,7 @@
         <div class="row">
           <div class="col-12">
             <p>Egypt was a destination I had been dying to visit for many, many
-              years. My childhood friend is Egytian and has family in Alexandria, 
+              years. My childhood friend is Egyptian and has family in Alexandria, 
               so we'd grown up discussing this trip and were excited when 
               we were finally able to do it together.</p>
             <figure>  
