--- a/app/templates/france.html
+++ b/app/templates/france.html
@@ -31,7 +31,7 @@
               my French friends took me all over Normandy and Brittany. In Normandy, 
               I visited a bunch of towns, like Caen and Chersbourg, but the 
               most memorable site for me was Saint Mont Michel, which is like a 
-              disney castle on an island.</p> 
+              Disney castle on an island.</p> 
             <figure> 
               <img srcset="{{ url_for('static', filename='images/france_carnac-1600.jpg') }} 1600w,
               {{ url_for('static', filename='images/france_carnac-1000.jpg') }} 1000w,
