--- a/app/templates/greece.html
+++ b/app/templates/greece.html
@@ -67,7 +67,7 @@
             <p>My other adventures in Rhodes led me to the Acropolis  and to a really 
               small aquarium at the tip of the island. The aquarium was actually pretty 
               cute. It was a pretty little island, but I hope to see more of Greece in 
-              the future (gotta go to Athens!).</p>
+              the future (gotta go to Athens)!</p>
           </div>
         </div>
       </article>
