--- a/app/templates/india.html
+++ b/app/templates/india.html
@@ -49,7 +49,7 @@
               sizes="(min-width: 750px) 800px, 500px"
               src="{{ url_for('static', filename='images/india_women-500.jpg') }}" 
               alt="Women from Rajasthan in traditional clothing">
-              <figcaption>Women in Rajasthani dress.</figcaption>
+              <figcaption>Women in Rajasthani dress</figcaption>
             </figure> 
             <p>The last time I went I was lucky enough to experience some new 
               things - I got to go to Rajasthan and also see people race oxen. 
@@ -66,7 +66,7 @@
               alt="Mustard field in Punjab">
               <figcaption>A beautiful mustard field!</figcaption>
             </figure>
-            <p>I also got to see a lot of farmland, including mustard fields 
+            <p>I also got to see a lot of farmland, including mustard fields,
               which were so pretty as to look photoshopped in pictures. I 
               have enjoyed my past visits to India, but I am definitely looking 
               forward to doing more intensive travel on my own! </p>
