--- a/app/templates/netherlands.html
+++ b/app/templates/netherlands.html
@@ -49,7 +49,7 @@
             </figure>
               <p>We often just walked around and took in the city. It was especially 
                 beautiful at night, and there were a few light installations 
-                (I didn't take any worthy pics of those, unfortunately.)</p> 
+                (I didn't take any worthy pics of those, unfortunately).</p> 
             <figure> 
               <img srcset="{{ url_for('static', filename='images/netherlands_kinderdijk-1600.jpg') }} 1600w,
               {{ url_for('static', filename='images/netherlands_kinderdijk-1000.jpg') }} 1000w,
