--- a/app/templates/uk.html
+++ b/app/templates/uk.html
@@ -24,7 +24,7 @@
             <p>If you know me, you know I am a bit of an Anglophile. I LOVE British 
               television. I would honestly love to one day live in London. I have 
               been to London a few times, and the Tower Bridge is my favorite site. 
-              I just had a really good day when we visited, and so I always think of 
+              I just had a really good day when we visited, so I always think of 
               it fondly!</p>
             <figure> 
               <img srcset="{{ url_for('static', filename='images/uk_brighton-1600.jpg') }} 1600w,
@@ -50,9 +50,9 @@
               <figcaption>The beautiful Crosby Beach, Liverpool</figcaption>
             </figure>
             <p>We also went further north and visited Liverpool, where I was bowled over
-              by the sculpture "Another Place" installed at Crosby Beach. We visited the 
+              by the sculpture "Another Place", installed at Crosby Beach. We visited the 
               beach after the sun had just set, and it was something to behold. 
-              I would love to visit again and again at different times of the day.</p>
+              I would love to visit again and again, at different times of the day.</p>
             <figure> 
               <img srcset="{{ url_for('static', filename='images/uk_balmoral_hotel-1600.jpg') }} 1600w,
               {{ url_for('static', filename='images/uk_balmoral_hotel-1000.jpg') }} 1000w,
@@ -67,7 +67,7 @@
               and Edinburgh, which is one of the prettiest cities I have ever seen. I 
               especially liked the Balmoral Hotel, which was so striking against the blue sky.
                I definitely also want to see more of Scotland - I look forward to 
-               one day visiting the highlands! </p> 
+               one day visiting the Highlands! </p> 
           </div>
         </div> 
       </article>
