--- a/app/templates/uruguay.html
+++ b/app/templates/uruguay.html
@@ -61,7 +61,7 @@
               alt="Plaza Independencia, Montevideo">
               <figcaption>Plaza Independencia in Montevideo</figcaption>
             </figure>
-            <p>In Montevideo, we walking all over the place and checked out 
+            <p>In Montevideo, we walked all over the place and checked out 
               Plaza Independencia. All in all, a nice place to visit!</p> 
           </div>
         </div>
