--- a/app/templates/germany.html
+++ b/app/templates/germany.html
@@ -19,7 +19,7 @@
               sizes="(min-width: 750px) 800px, 500px"
               src="{{ url_for('static', filename='images/germany_wall-500.jpg') }}"
               alt="Piece of Berlin wall">
-              <figcaption>Berlin Wall Today</figcaption>
+              <figcaption>Berlin Wall today</figcaption>
             </figure> 
             <p>I visited Berlin while I was working in France. My friend and I 
               went in late December, so my memories are marred by the most bitter 
@@ -47,7 +47,7 @@
               sizes="(min-width: 750px) 800px, 500px"
               src="{{ url_for('static', filename='images/germany_currywurst-500.jpg') }}"
               alt="Currywurst - sausage with ketchup">
-              <figcaption>Mmm, Currywurst *drool*</figcaption>
+              <figcaption>Mmm, currywurst *drool*</figcaption>
             </figure>
             <p>One thing I remember most about my trip to Berlin is currywurst - 
               I ate so much I thought I was going to be sick. I regret nothing!</p>
@@ -61,7 +61,7 @@
               alt="Brandenburg Gate, Berlin">
               <figcaption>The Brandenburg Gate</figcaption>
             </figure>
-            <p>We ended up spending the New Year in Berlin, which was a little 
+            <p>We ended up spending New Year's in Berlin, which was a little 
               terrifying, given fireworks are legal. People were setting them off 
               every few seconds and I kept ducking, thinking I was getting shot at. 
               Oh well! At least there had been a giant fair near the Brandenburg Gate 
