--- a/app/templates/italy.html
+++ b/app/templates/italy.html
@@ -11,10 +11,10 @@
       <article class="country-page">
         <div class="row">
           <div class="col-12">
-            <p> I studied abroad in Italy and even learned Italian pretty well!
-                I have unfortunately forgetten much of it. I studied at the University
+            <p> I studied abroad in Italy and even learned to speak Italian pretty well!
+                I have unfortunately forgotten much of it. I studied at the University
                 of Florence and stayed with a sweet Italian family. The best way to 
-                take in Florence was to go to the top of the Piazzale Michelangelo, 
+                take in Florence is to go to the top of the Piazzale Michelangelo, 
                 which is positioned high above the whole city and which we visited
                 early in our stay.</p> 
             <figure>
