--- a/app/static/scss/main.scss
+++ b/app/static/scss/main.scss
@@ -20,6 +20,11 @@
     }
 }
 
+/* all */
+* {
+    @include color;
+}
+
 /* html and body*/
 html, body {
     height: 100%;
@@ -28,11 +33,11 @@ html, body {
 
 /*header and footer*/
 li.fas:before {
-    color: white;
+    @include color;
 }
 
 header, footer {
-    background-color: black; 
+    background-color: #292f33; 
     li {
         @include display(inline);
         margin-left: 1em;
@@ -83,6 +88,7 @@ h3 {
 main {
     min-height: 74%;
     padding-bottom: 5%;
+    background-color: #292f33
 }
 
 /*content*/
@@ -95,6 +101,7 @@ img.index {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    border-radius: 12px;
 }
 
 div.col-4 a {
@@ -116,11 +123,11 @@ div.col-12 {
 }
 
 section a {
-    @include color(black);
+    @include color;
     text-decoration: none;
     @include display(inline-block);
     &:hover {
-        @include color(black);
+        @include color;
         text-decoration: underline; 
     }
 }
@@ -146,6 +153,7 @@ section h3 {
         font-style: italic; 
     }
     img {
+        border-radius: 12px;
         padding-top: 0.4%; 
         max-width: 100%;
         @include display();
