--- a/app/static/scss/main.scss
+++ b/app/static/scss/main.scss
@@ -122,7 +122,7 @@ div.col-12 {
     }
 }
 
-section a {
+article a {
     @include color;
     text-decoration: none;
     @include display(inline-block);
@@ -132,7 +132,7 @@ section a {
     }
 }
 
-section h3 {
+article h3 {
     @include respond-to(max-width, 991px) {
         padding-top: 1%;
         padding-bottom: 2%;
