--- a/app/static/scss/main.scss
+++ b/app/static/scss/main.scss
@@ -203,7 +203,8 @@ span.error {
 
 ul.message-ul {
     list-style-type: none;
-    background-color: black;
+    background-color: #292f33;
+    margin: 0;
 }
 
 li.message-li {
